src/App.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

#root {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Poppins";
  display: flex;
  background-color: #f8f8f8;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}
.layout {
  display: flex;
  width: 100%;
  height: 100%;
  max-width: 1200px;
  background-color: #f8f8f8;
  overflow: hidden;

  gap: 60px;
  padding: 40px;
}
.container {
  display: flex;
  flex-direction: column;
  flex: 1;
  width: 100%;

  max-width: 1200px;
  background-color: #f8f8f8;
}
.right {
  flex: 1;
  background: no-repeat;
  background-size: contain;
  height: 560px;
  width: auto;
  background-color: #0c0101;
}
.container h1 {
  font-size: 2em;
  margin-bottom: 10px;
}
.container h3 {
  font-size: 1rem;
  margin-bottom: 20px;
  color: #636364;
}
.form {
  display: flex;
  flex-direction: column;
  gap: 20px;
  height: 530px;
  width: 100%;
  margin-left: -9px;
}

.form label {
  display: block;
  margin-bottom: 5px;
  font-weight: bold;
}
.form input[type="email"],
.form input[type="password"] {
  width: 95%;
  padding: 12px;
  font-size: 1rem;
  border: 1px solid;
  border-radius: 12px;
  box-shadow: 0px 4px 10px 0px #00000040;
  color: #c4c4c4;
}
.rememberme {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-bottom: 20px;
}

button {
  border: 1px solid #00000040;
  width: 313.96722412109375;
}

.google {
  padding: 14px;
  border-radius: 12px;
  background-color: #f8f8f8;
  box-shadow: 0px 4px 10px 0px #00000040;
}
.google img {
  margin-right: 9px;
  width: 10px;
}
.signin {
  background-color: #ea454c;
  box-shadow: 0px 4px 10px 0px #e9444b40;
  color: #f8f8f8;
  border-radius: 12px;
  padding: 14px;
}
.noaccount {
  text-align: center;
}
@media screen and (max-width: 780px) {
  .right img {
    display: none;
  }
  .form {
    justify-content: center;
    gap: 10px;
  }
  .layout {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    gap: 20px;
    overflow-y: hidden;
    height: fit-content;
  }
  body {
    height: fit-content;
  }
  .container {
    justify-content: center;
  }
  button {
    max-width: 100%;
  }
  .form input {
    width: 95%;
  }
  .checkremember input {
    width: auto;
  }
}
@media screen and (max-width: 600px) {
  .layout {
    gap: 20px;
    padding: 20px;
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: 60px;
    overflow-y: hidden;
    height: fit-content;
    max-width: fit-content;
  }
  .rememberme {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
  }
  .checkremember {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    gap: 8px;
  }
  .checkremember input {
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
    width: auto;
  }

  .forgot {
    display: block;
    margin-top: 10px;
  }
  .right img {
    display: none;
  }
}
@media screen and (max-width: 640px) {
  .right img {
    display: none;
  }
  .rememberme {
    margin-bottom: 10px;
  }

  .layout {
    overflow-y: hidden;
    height: fit-content;
  }
}
@media screen and (max-width: 768px) {
  .layout {
    grid-template-columns: 1fr;
    overflow-y: hidden;
    height: 100vh;
  }
  .right img {
    display: none;
  }
}
@media screen and (max-width: 400px) {
  .layout {
    height: 650px;
    gap: 10px;
    max-width: fit-content;
  }
  .right img {
    display: none;
  }
  body {
    font-size: small;
  }
  .rememberme {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
  }
  .checkremember {
    gap: 8px;
    align-items: flex-start;
  }

  .forgot {
    display: block;
    margin-top: 10px;
  }
}

